<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="64dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/intro1"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/splash_text_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/splash_text_main"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/splash_text_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/splash_text_secondary"
            android:textSize="16sp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/start_registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_start_button_name"
            android:background="@drawable/btn_plain_ns_1"
            android:textColor="@android:color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>