<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:background="@color/color_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/size_padding_common"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/intro1"
            android:layout_marginBottom="@dimen/size_large"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/splash_text_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/splash_text_main"
            android:textSize="@dimen/text_size_xxlarge"
            android:layout_marginBottom="@dimen/size_small"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/splash_text_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/splash_text_secondary"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginBottom="@dimen/size_xlarge"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/start_registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_start_button_name"
            android:background="@drawable/btn_plain_ns_1"
            android:textColor="@android:color/white"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:textSize="@dimen/text_size_large"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>